Skip to content

items loaded by uri in lua http interface show wrong name in playlist

when you open an item using a uri through the luahttp interface, it will show up in the playlist in the QT interface with the name set to

file://etc rather than the name

the reason is in modules/lua/vlc.c vlclua_playlist_add_internal()

this recieves a uri in psz_path psz name is then set to psz_path

and the playlist item is created with

p_input = input_item_NewExt( psz_path, psz_name,...

input_item_NewExt should be given a uri and a name, rather than the uri twice.

this can be fixed with something like

                    if( !lua_isnil( L, -1 ) )
                        msg_Warn( p_this, "Playlist item name should be a string." );
                    psz_name = magicFunctionToGetNameFromUri(psz_path);

input_item_NewExt seems to be in wide usage, but courmisch argues that it is input_item_NewExt which needs fixing as it should not require a uri and a name

http://dionoea.chewa.net/irc/videolan/%23videolan-2011-09-25.log

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information