instead of sending the uri as name to input_item_NewExt, send NULL and the core will deal with it (fix #5378)

Signed-off-by: Rémi Denis-Courmont <remi@remlab.net>